fix: inherit env vars for MCP servers and document Deepgram STT setup

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ GOOGLE_CLIENT_SECRET=your-client-secret
 ANTHROPIC_ADMIN_API_KEY=sk-ant-admin...
 BRAVE_API_KEY=BSA...
 GITHUB_TOKEN=ghp_...
+DEEPGRAM_API_KEY=dg_...
