--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -8,8 +8,58 @@ on:
   pull_request:
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: pip
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ".[dev]"
+
+      - name: Ruff lint
+        run: ruff check src tests
+
+      - name: Ruff format check
+        run: ruff format --check src tests
+
+  typecheck:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: pip
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ".[dev]"
+
+      - name: Mypy (critical architecture modules)
+        run: |
+          mypy --config-file mypy.ini \
+            src/micro_x_agent_loop/agent.py \
+            src/micro_x_agent_loop/voice_runtime.py \
+            src/micro_x_agent_loop/turn_engine.py \
+            src/micro_x_agent_loop/mcp \
+            src/micro_x_agent_loop/providers
+
   test:
     runs-on: ubuntu-latest
+    needs: [lint, typecheck]
     strategy:
       fail-fast: false
       matrix:
@@ -28,7 +78,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .
+          pip install ".[dev]"
 
       - name: Run unit tests
         run: python -m unittest discover -s tests
